# rust-tests-stub-project

./: Cargo.toml  README.md
tests/testsuite/: lib.rs  test_xxx.rs  test_yyy.rs
tests/testsuite/cratetests/: Cargo.toml  lib.rs
tests/testsuite/cratetests/common/: mod.rs  utils.rs
